# tuisongji

./: LICENSE  README.md  components.json  index.html  node-env.d.ts  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release.js
src/: App.vue  OverlayApp.vue  main.ts  tauri.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bilibili_api.rs  github_sounds.rs  lib.rs  main.rs  poller.rs  sound.rs  state.rs  toast_overlay.rs  updater.rs
src-tauri/src/api/: bilibili.rs  douyu.rs  huya.rs  mod.rs
src/assets/: main.css
src/components/: AppHeader.vue  SettingsSection.vue  SubscriptionForm.vue  SubscriptionItem.vue  SubscriptionList.vue  TestPanel.vue  UpdateDialog.vue
src/components/ui/badge/: Badge.vue  index.ts
src/components/ui/button/: Button.vue  index.ts
src/components/ui/card/: Card.vue  CardContent.vue  CardDescription.vue  CardHeader.vue  CardTitle.vue
src/components/ui/input/: Input.vue
src/components/ui/label/: Label.vue
src/components/ui/number-field/: NumberField.vue
src/components/ui/separator/: Separator.vue
src/composables/: useBilibili.ts
src/types/: index.ts
