[package]
name = "tuisongji"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tuisongji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
store = { git = "https://github.com/hanaTsuk1/store" }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate"] }
tokio = { version = "1", features = ["time"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
rodio = { version = "0.19", features = ["mp3", "wav"] }
rand = "0.8"
async-trait = "0.1"
scraper = "0.20"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

